# django-img-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  z.notes.txt
.github/workflows/: build.yml  python-publish.yml
django_img_optimizer/: apps.py  utils.py
django_img_optimizer/management/commands/: optimize_images.py
django_img_optimizer/templatetags/: image_optimizer.py
tests/: settings.py  test_build.py
tests/app/: views.py
tests/app/templates/: index.html
